Capturar imágenes de la camara o de la galería

--- a/app/src/main/res/layout/inputdialog.xml
+++ b/app/src/main/res/layout/inputdialog.xml
@@ -8,6 +8,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="Id."
-        android:inputType="number" />
+        android:hint="Descripción"
+        android:inputType="textPersonName" />
 </LinearLayout>
