--- a/app/src/main/res/layout/activity_imagenes.xml
+++ b/app/src/main/res/layout/activity_imagenes.xml
@@ -8,7 +8,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="495dp"
+        android:layout_height="wrap_content"
         android:layout_margin="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -35,7 +35,7 @@
                     android:id="@+id/imageButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:onClick="takePhoto"
+                    android:onClick="tomarFoto"
                     app:srcCompat="@android:drawable/ic_menu_camera" />
 
                 <ImageButton
@@ -57,6 +57,7 @@
                 android:id="@+id/button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:backgroundTint="#673AB7"
                 android:onClick="quitarImg"
                 android:text="Limpiar" />
 
