--- a/app/src/main/res/layout/activity_producto_firebase.xml
+++ b/app/src/main/res/layout/activity_producto_firebase.xml
@@ -88,4 +88,11 @@
             android:text="Editar" />
     </TableRow>
 
+    <ProgressBar
+        android:id="@+id/progressBar2"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible" />
+
 </LinearLayout>
